2001-05-23  Andreas Jaeger  <aj@suse.de>

	* iconvdata/testdata/WINDOWS-1255..UTF-8: Renamed to...
	* iconvdata/testdata/WINDOWS-1255..UTF8: this.

2001-05-27  Andreas Jaeger  <aj@suse.de>

	* manual/stdio.texi (String Streams): Fix fmemopen description.
	Reported by Michal Kochanowicz <michal@michal.waw.pl>.

2001-05-26  H.J. Lu <hjl@gnu.org>

	* sysdeps/unix/sysv/linux/mips/syscalls.list: Change sigsuspend
	to s_sigsuspend. Add s_mmap2.

	* sysdeps/mips/atomicity.h: New file.

	* sysdeps/unix/sysv/linux/mips/getsysstats.c: New file.

	* sysdeps/unix/sysv/linux/mips/bits/ipc.h (ipc_perm): Put
	back __key.

2001-05-25  Bruce Mitchener  <bruce@cubik.org>

	* manual/ctype.texi: Minor fix.
	* manual/install.texi: Likewise.
	* manual/startup.texi: Likewise.
	* manual/examples/dir.c: Use perror() rather than puts().

2001-05-25  David Mosberger  <davidm@hpl.hp.com>

	* sysdeps/unix/sysv/linux/ia64/bits/sigcontext.h: Put stuff following
	#endif directive inside a comment to avoid compiler warnings.

2001-05-25  Philipp Thomas  <pthomas@suse.de>

	* nis/nis_print.c (nis_nstype2str): Don't mark names of
	naming services for translation, only UNKNOWN needs it.
	Add comment to prevent it for the future.

2001-05-25  Joseph S. Myers  <jsm28@cam.ac.uk>

	* misc/sys/cdefs.h (__restrict_arr): Define appropriately for GCC
	3.1 and non-GCC C99 compilers.

2001-05-22  David Mosberger  <davidm@hpl.hp.com>

	* sysdeps/ia64/memmove.S: Increase MEMLAT from 6 to 21 for better
	performance.
	* sysdeps/ia64/memcpy.S: Likewise.

	* sysdeps/ia64/bcopy.S: New file.

	* sysdeps/ia64/bzero.S: New file (derived from memset.S).

2001-05-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/ia64/fpu/libm-test-ulps: Add deltas for tanh(-0.7).

2001-05-24  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/Makefile: Add rules for CP10007.
	* iconvdata/gconv-modules: Add entries for CP10007 ad MacCyrillic.
	* iconvdata/cp10007.c: New file.
	* iconvdata/tst-tables.sh: Add CP10007.
